# stacks-azure-data

./: .docstr.yaml  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.adoc  README.md  SECURITY.md  eirctl.yaml  environments-template.json  pyproject.toml  stackscli.yml  taskctl.yaml  yamllint.conf
.github/: copilot-instructions.md
.github/instructions/: azure-devops-pipelines.instructions.md
.github/prompts/: investigate-build-failure.prompt.md  update-dependencies.prompt.md  update-devops.prompt.md
component_generation/: component_generation_cli.py  utils.py
config/ingest_sources/: example_source_1.json  example_source_2.json
config/ingest_sources/schema/: ingest_config_schema.json
data-platform/azure/: Makefile  README.md  pyproject.toml
data-platform/azure/config/ingest-sources/: example_config.json  example_config2.json
data-platform/azure/config/ingest-sources/schema/: ingest_config_schema.json
data-platform/azure/tests/unit/: test_config.py
data_factory/adf_managed/: README.md
data_factory/adf_managed/dataset/: ds_dp_ConfigStore_Json.json  ds_dp_DataLake_Parquet.json
data_factory/adf_managed/factory/: amido-stacks-dev-euw-adf.json  amido-stacks-dev-euw-de.json
data_factory/adf_managed/linkedService/: ls_ADLS_DataLake.json  ls_AzureSql_ExampleSource.json  ls_Blob_ConfigStore.json  ls_KeyVault.json
data_factory/adf_managed/pipeline/: Generate_Ingest_Query.json  Get_Ingest_Config.json  Ingest_AzureSql_Example.json
data_processing/: data-processing-config-pipeline.yml
data_processing/config/data_quality/: silver_dq.json
data_processing/jobs/gold/: examplejob.yml
data_processing/jobs/silver/: silver copy.yml  silver-with-publish.yml  silver-without-AIR.yml  silver.yml
data_quality/: data-quality-config-pipeline.yml  release-creation-test.yml
data_quality/config/data_quality/: checkpoint.yaml  test.yaml
data_quality/jobs/examplejob_copy/: exmaplejob.yml
datastacks/: README.md  config.py  config_class.py  datastacks-pipeline.yml  datastacks_cli.py  utils.py
datastacks/cli/: config.py
datastacks/datastacks/: __init__.py  config.py  config_class.py  constants.py  datastacks-pipeline.yml  datastacks_cli.py  logger.py  utils.py
datastacks/datastacks/azure/: adls.py  blob.py  data_factory.py
datastacks/datastacks/behave/: fixtures.py  shared_steps.py
datastacks/datastacks/cli/: datastacks_cli.py  utils.py
datastacks/datastacks/generate/: data_workloads.py  template_config.py
datastacks/datastacks/pyspark/: config.py  etl.py  pyspark_utils.py
datastacks/datastacks_cli/: datastacks_cli.py  utils.py
datastacks/tests/unit/: template_structures.py  test_utils.py
datastacks_tests/unit/: template_structures.py  test_config.yml  test_utils.py
de_build/: adf-pipelines.yml  air-data-testing-vars.yml  arm-validate.yml  build-adf-spark-job-new.yml  build-adf-spark-job.yml  build-dataquality-job.yml  build-ingest-job.yml  de-workload-testing.yml  job-pipeline-vars.yml
de_build/adf/: PrePostDeploymentScriptLatest.ps1  adf-pipeline-vars.yml  adf-pipeline.yml  adf-pipelines.yml  air-data-testing-vars.yml  air-data-testing-varsV1.yml
de_templates/: test_config_Ingest_AzureSql_SourceName.yaml  test_config_ingest.yaml  test_config_processing.yaml  test_jinja.py
de_templates/ingest/Ingest_AzureSql_SourceName/: config.yaml  de-ingest-azuresql-example.yml  de-ingest-azuresql-example.yml.jinja
de_templates/ingest/Ingest_AzureSql_SourceName_DQ/: de-ingest-azuresql-example.yml  de-ingest-azuresql-source-name.yml.jinja
de_templates/ingest/Ingest_SourceType_SourceName/: README.md  de-ingest-ado-pipeline.yml.jinja
de_templates/ingest/Ingest_SourceType_SourceName_DQ/: README.md.jinja  de-ingest-ado-pipeline.yml.jinja
de_templates/processing/processing_template/: README.md.jinja  de-process-ado-pipeline.yml.jinja
de_templates/processing/processing_template_DQ/: de-process-ado-pipeline.yml.jinja
de_workloads/data_processing/silver/: README.md  silver.yml
de_workloads/data_processing/silver_movies_example/: README.md  silver_movies_example.yml
de_workloads/generate_examples/: README.md
de_workloads/ingest/: README.md  ingest-config-pipeline.yml  release-creation-test.yml
de_workloads/ingest/Ingest_AzureSql_Demo/: de-ingest-ado-pipeline.yml
de_workloads/ingest/Ingest_AzureSql_Example/: README.md  de-ingest-azuresql-example copy.yml  de-ingest-azuresql-example.yml  ingest-azuresql-example.yml  ingest-config-pipeline.yml
de_workloads/ingest/ingest_azure_sql_example/: README.md  (+1 more)
de_workloads/shared_resources/: de-shared-resources.yml  taskctl.yaml
docs/: ADF_Deployment.md  Data_Ingestion.md  Infrastructure_Deployment.adoc  Infrastructure_Deployment.md  azure-pipelines-best-practices.md  terraform-state-key-standardization.md
docs/images/: draft.md
ingest/: adf-pipeline.yml  ingest-config-pipeline.yml  ingestconfig-pipeline.yml  release-creation-test.yml
pysparkle/: README.md  entrypoint.py  pyproject.toml  pysparkle-pipeline.yml
pysparkle/pysparkle/: __main__.py  adls_utils.py  config.py  const.py  etl.py  gold.py  logger.py  pyspark_utils.py  pysparkle_cli.py  silver.py  storage_utils.py  utils.py
pysparkle/pysparkle/data_quality/: README.md  config.py  data_quality.py  data_quality_utils.py  main.py  utils.py
pysparkle/pysparkle/dq/: data_quality.py  data_quality_utils.py
pysparkle/pysparkle/etl/: etl.py  gold.py  silver.py
pysparkle/tests/unit/: conftest.py  test_adls_utils.py  test_etl.py  test_pyspark_utils.py  test_silver.py  test_storage_utils.py  test_utils.py
pysparkle/tests/unit/data/: keywords.csv  test_config.json
pysparkle/tests/unit/data/movies_dataset/: credits.csv
pysparkle/tests/unit/data_quality/: README.md  conftest.py  test_data_quality_utils.py  test_utils.py
pysparkle/tests/unit/dq/: conftest.py  test_data_quality_utils.py
pysparkle/tests/unit/etl/: test_etl.py  test_silver.py
stacks-cli/: data-scaffold-example.yml
tests/unit/: test_config.py
utils/: README.md  __init__.py  config_utils.py  constants.py  testing_utils.py
utils/azure/: adls.py  data_factory.py
(+451 files in other folders)
