[tool.poetry]
name = "stacks-azure-data"
version = "0.6.0"
description = "Ensono Stacks provides a solution to accelerate the deployment of an Azure data platform."
authors = [
    "Ensono Stacks <stacks@ensono.com>"
]
readme = "README.md"
homepage = "https://github.com/Ensono/stacks-azure-data"
package-mode = false

[tool.poetry.dependencies]
python = ">3.9.1, <3.12"
stacks-data = "^1.0.0"
# Security updates - explicit constraints to override transitive dependencies
jinja2 = ">=3.1.6"
requests = ">=2.32.5"
pyyaml = ">=6.0.3"
certifi = ">=2025.11.12"
cryptography = {version = ">=46.0.3", python = ">3.9.0,<3.9.1 || >3.9.1,<3.12"}
urllib3 = ">=2.5.0"
setuptools = ">=80.9.0"
# Additional security constraints for moderate/low vulnerabilities
tornado = ">=6.4"
idna = ">=3.6"
pygments = ">=2.17.2"
mistune = ">=3.0.2"
babel = ">=2.13.1"
bleach = ">=6.1.0"
websocket-client = ">=1.7.0"
markupsafe = ">=2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = {version = "^9.0.1", python = ">=3.10,<3.12"}
black = "^25.11.0"
pre-commit = {version = "^4.4.0", python = ">=3.10,<3.12"}
flake8 = "^7.3.0"
flake8-docstrings = "^1.7.0"
pydocstyle = "^6.3.0"
tomli = "^2.3.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.black]
    line-length = 120
    target-version = ['py310']
    exclude = '''
    /(
        \.git
      | \.venv
    )/
    '''

[tool.flake8]
max-line-length = "120"
exclude = ".venv,.git"

[tool.pydocstyle]
convention = "google"
add-ignore = "D100,D101,D104"
match = "(?!test_|conftest).*\\.py"
match_dir = "^(?!(tests)).*"
