[tool.poetry]
name = "stacks-azure-data"
version = "0.6.0"
description = "Ensono Stacks provides a solution to accelerate the deployment of an Azure data platform."
authors = [
    "Ensono Stacks <stacks@ensono.com>"
]
readme = "README.md"
homepage = "https://github.com/Ensono/stacks-azure-data"
package-mode = false

[tool.poetry.dependencies]
python = ">3.10, <3.13"
stacks-data = "^1.0.0"
# Security updates - explicit constraints to override transitive dependencies
jinja2 = ">=3.1.6"
requests = ">=2.32.5"
pyyaml = ">=6.0.3"
certifi = ">=2025.11.12"
cryptography = {version = ">=46.0.3", python = ">3.9.0,<3.9.1 || >3.9.1,<3.12"}
urllib3 = ">=2.2.2"  # CVE-2024-37891: Updated from 2.1.0 (Dependabot PR #247)
setuptools = ">=70.0.0"  # CVE-2024-6345: Updated from 69.0.2 (Dependabot PR #248)
filelock = ">=3.20.3"  # CVE-2025-68146, CVE-2026-22701: TOCTOU race condition vulnerabilities (GHSA-w853-jp5j-5j7f, GHSA-qmgc-5h2g-mvrw)
# Additional security constraints for moderate/low vulnerabilities
tornado = ">=6.4.1"  # CVE-2024-52804: Updated from 6.4 (Dependabot PR #252)
idna = ">=3.6"
pygments = ">=2.17.2"
mistune = ">=3.0.2"
babel = ">=2.13.1"
bleach = ">=6.1.0"
websocket-client = ">=1.7.0"
markupsafe = ">=2.1.3"
# Transitive dependency constraints from Dependabot
jupyterlab = ">=4.2.5"  # Security update (Dependabot PR #254)
notebook = ">=7.2.2"  # Security update (Dependabot PR #251)
zipp = ">=3.19.1"  # CVE-2024-5569: Path traversal vulnerability (Dependabot PR #250)

[tool.poetry.group.dev.dependencies]
pytest = {version = "^9.0.1", python = ">=3.10,<3.12"}
black = "^25.11.0"
pre-commit = {version = "^4.4.0", python = ">=3.10,<3.12"}
flake8 = "^7.3.0"
flake8-docstrings = "^1.7.0"
pydocstyle = "^6.3.0"
tomli = "^2.3.0"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.black]
    line-length = 120
    target-version = ['py310']
    exclude = '''
    /(
        \.git
      | \.venv
    )/
    '''

[tool.flake8]
max-line-length = "120"
exclude = ".venv,.git"

[tool.pydocstyle]
convention = "google"
add-ignore = "D100,D101,D104"
match = "(?!test_|conftest).*\\.py"
match_dir = "^(?!(tests)).*"
