[tool.poetry]
name = "pysparkle"
version = "0.1.0"
description = "PySpark data transformer"
authors = ["Paulina Motyl <paulina.motyl@ensono.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
pyspark = "^3.4.0"

[tool.poetry.scripts]
pysparkle = "pysparkle.pysparkle_cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
